--- a/index.html
+++ b/index.html
@@ -4,60 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
-    <header>
-      <nav>
-        <a href="">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="head">
+      <a class="link logo" href="./index.html"
+        >Web<span class="second-logo">Studio</span>
+      </a>
+      <nav class="nav-link-item">
+        <ul class="list">
+          <li><a class="nav-link link" href="">Студия</a></li>
+          <li>
+            <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
 
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul class="list">
+        <li>
+          <a class="mail link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
-
     <!--Main content-->
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
       <!--Skills-->
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="skills-title">Внимание к деталям</h3>
+            <p class="skills-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="skills-title">Пунктуальность</h3>
+            <p class="skills-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="skills-title">Планирование</h3>
+            <p class="skills-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="skills-title">Современные технологии</h3>
+            <p class="skills-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -66,8 +82,8 @@
       </section>
       <!-- Skills images-->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -92,17 +108,17 @@
         </ul>
       </section>
       <!-- Our Team-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="our-team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/photo1.jpg"
               alt="фото игорь демьяненко"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Игорь Демьяненко</h3>
+            <p class="job-title">Product Designer</p>
           </li>
           <li>
             <img
@@ -110,8 +126,8 @@
               alt="фото ольга репина"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Ольга Репина</h3>
+            <p class="job-title">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -119,8 +135,8 @@
               alt="фото николай тарасов"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="name">Николай Тарасов</h3>
+            <p class="job-title">Marketing</p>
           </li>
           <li>
             <img
@@ -128,25 +144,37 @@
               alt="фото михаил ермаков"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Михаил Ермаков</h3>
+            <p class="job-title">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="">WebStudio</a>
+    <footer class="footer">
+      <a class="link logo" href="./index.html"
+        >Web<span class="footer-logo">Studio</span>
+      </a>
       <address>
-        <ul>
+        <ul class="adress-list list">
           <li>
-            <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+            <a
+              class="link adress-link"
+              href="https://goo.gl/maps/aopTPPwmk2LdjYj96"
+              target="_blank"
+              rel="noreferrer noopener"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="link mail-link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="link tel-link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
