--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <ul class="adress-list list">
           <li>
             <a
-              class="link adress-link"
+              class="link adress-link nav-link"
               href="https://goo.gl/maps/aopTPPwmk2LdjYj96"
               target="_blank"
               rel="noreferrer noopener"
